assert(SafepointMechanism::local_poll_armed(_handshakee)) failed: Must be

XMLWordPrintable

    • b26
    • Verified

      Test: runtime/handshake/HandshakeDirectTest.java

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79134/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7f32f470-d75c-46d8-95d7-95126e27764b/runs/44c27728-182a-4b52-89d2-08c763d3bd28/workspace/open/src/hotspot/share/runtime/handshake.cpp:574), pid=434172, tid=434194
      # assert(SafepointMechanism::local_poll_armed(_handshakee)) failed: Must be
      #
      # JRE version: Java(TM) SE Runtime Environment (17.0+21) (fastdebug build 17-ea+21-LTS-1854)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+21-LTS-1854, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0xd042fc] HandshakeState::try_process(HandshakeOperation*)+0x24c
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/scratch/3/core.434172)
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -Dtest.vm.opts=-XX:MaxRAMPercentage=6 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/tmp -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=6 -J-Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/tmp -Dtest.compiler.opts= -Dtest.java.opts= -Dtest.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/linux-aarch64-debug.jdk/jdk-17/fastdebug -Dcompile.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/linux-aarch64-debug.jdk/jdk-17/fastdebug -Dtest.timeout.factor=4.0 -Dtest.nativepath=/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/linux-aarch64-debug.test/hotspot/jtreg/native -Dtest.root=/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/src.full/open/test/hotspot/jtreg -Dtest.name=runtime/handshake/HandshakeDirectTest.java -Dtest.file=/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/src.full/open/test/hotspot/jtreg/runtime/handshake/HandshakeDirectTest.java -Dtest.src=/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/src.full/open/test/hotspot/jtreg/runtime/handshake -Dtest.src.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/src.full/open/test/hotspot/jtreg/runtime/handshake:/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/src.full/open/test/hotspot/jtreg/testlibrary:/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/src.full/open/test/lib -Dtest.classes=/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/2/runtime/handshake/HandshakeDirectTest.d -Dtest.class.path=/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/2/runtime/handshake/HandshakeDirectTest.d:/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/2/testlibrary:/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/2/test/lib -Dtest.class.path.prefix=/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/2/runtime/handshake/HandshakeDirectTest.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/src.full/open/test/hotspot/jtreg/runtime/handshake:/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/2/testlibrary:/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/classes/2/test/lib -XX:MaxRAMPercentage=6 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/tmp -Djava.library.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-17+21-1854/linux-aarch64-debug.test/hotspot/jtreg/native -XX:+UnlockDiagnosticVMOptions -XX:+UseBiasedLocking -XX:GuaranteedSafepointInterval=10 -XX:+HandshakeALot -XX:+SafepointALot -XX:BiasedLockingDecayTime=100000000 -XX:BiasedLockingBulkRebiasThreshold=1000000 -XX:BiasedLockingBulkRevokeThreshold=1000000 com.sun.javatest.regtest.agent.MainWrapper /opt/mach5/mesos/work_dir/slaves/3c846bae-ce30-4a97-93ee-9fef4497ccb6-S79686/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/60a09f6f-6524-46f9-9f4e-833b4510b0e2/runs/617be5de-e68f-40c0-9594-f080c648faad/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_runtime/runtime/handshake/HandshakeDirectTest.d/main.1.jta

      Host: AArch64, 8 cores, 62G, Oracle Linux Server release 8.3
      Time: Wed May 5 11:11:50 2021 UTC elapsed time: 4.380574 seconds (0d 0h 0m 4s)

      --------------- T H R E A D ---------------

      Current thread (0x0000ffff00006800): JavaThread "0" [_thread_in_vm, id=434194, stack(0x0000ffff17500000,0x0000ffff17700000)] _threads_hazard_ptr=0x0000fffe78008100, _nested_threads_hazard_ptr_cnt=0

      Stack: [0x0000ffff17500000,0x0000ffff17700000], sp=0x0000ffff176fdc50, free space=2039k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xd042fc] HandshakeState::try_process(HandshakeOperation*)+0x24c
      V [libjvm.so+0xd04830] Handshake::execute(HandshakeClosure*, JavaThread*)+0x1b0
      V [libjvm.so+0x65d610] BiasedLocking::single_revoke_with_handshake(Handle, JavaThread*, JavaThread*)+0x120
      V [libjvm.so+0x65f018] BiasedLocking::revoke(JavaThread*, Handle)+0x2c8
      V [libjvm.so+0x16cc8d8] ObjectSynchronizer::enter(Handle, BasicLock*, JavaThread*)+0x288
      V [libjvm.so+0x15b9ef8] SharedRuntime::monitor_enter_helper(oopDesc*, BasicLock*, JavaThread*)+0x208
      V [libjvm.so+0x15ba1ac] SharedRuntime::complete_monitor_locking_C(oopDesc*, BasicLock*, JavaThread*)+0x28

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~RuntimeStub::_complete_monitor_locking_Java
      J 174% c2 HandshakeDirectTest.run()V (185 bytes) @ 0x0000ffff65246464 [0x0000ffff652458c0+0x0000000000000ba4]
      j java.lang.Thread.run()V+11 java.base@17-ea
      v ~StubRoutines::call_stub
      Register to memory mapping:

            Assignee:
            Robbin Ehn
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: