8266557: assert(SafepointMechanism::local_poll_armed(_handshakee)) failed: Must be

Reviewed-by: pchilanomate, dcubed